--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#020205" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
 
     <title>Portfolio UX/UI y Desarrollo Web | Facu Cabaña Mosto</title>
 
