--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <meta name="theme-color" content="#020205" />
     <link rel="apple-touch-icon" href="/favicon.png" />
 
+    <!-- Google Fonts Optimized (Non-blocking) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link 
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&family=Plus+Jakarta+Sans:wght@500;600;700;800&display=swap" 
+      rel="stylesheet" 
+      media="print" 
+      onload="this.media='all'" 
+    />
+    <noscript>
+      <link 
+        href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Outfit:wght@300;400;500;600;700&family=Plus+Jakarta+Sans:wght@500;600;700;800&display=swap" 
+        rel="stylesheet" 
+      />
+    </noscript>
+
     <title>Portfolio UX/UI y Desarrollo Web | Facu Cabaña Mosto</title>
 
     <link rel="canonical" href="https://facucabana.com.ar/" />
